Implemented debugger for training component with sample pipeline, unit tests, and integration test

--- a/components/aws/sagemaker/common/train.template.yaml
+++ b/components/aws/sagemaker/common/train.template.yaml
@@ -21,6 +21,9 @@ VpcConfig:
 StoppingCondition:
   MaxRuntimeInSeconds: 86400
   MaxWaitTimeInSeconds: 86400
+DebugHookConfig: {}
+DebugRuleConfigurations: []
+TensorBoardOutputConfig: {}
 CheckpointConfig:
   S3Uri: ''
   LocalPath: ''
