--- a/components/aws/sagemaker/train/component.yaml
+++ b/components/aws/sagemaker/train/component.yaml
@@ -94,6 +94,18 @@ inputs:
     description: 'The endpoint URL for the private link VPC endpoint.'
     default: ''
     type: String
+  - name: debug_hook_config
+    description: 'Configuration information for the debug hook parameters, collection configuration, and storage paths.'
+    default: '{}'
+    type: JsonObject
+  - name: debug_rule_config
+    description: 'Configuration information for debugging rules.'
+    default: '[]'
+    type: JsonArray
+  - name: tensorboard_output_config
+    description: 'Configuration of storage locations for TensorBoard output.'
+    default: ''
+    type: JsonObject
   - name: tags
     description: 'Key-value pairs, to categorize AWS resources.'
     default: '{}'
@@ -129,6 +141,9 @@ implementation:
       --vpc_subnets, {inputValue: vpc_subnets},
       --network_isolation, {inputValue: network_isolation},
       --traffic_encryption, {inputValue: traffic_encryption},
+      --debug_hook_config, {inputValue: debug_hook_config},
+      --debug_rule_config, {inputValue: debug_rule_config},
+      --tensorboard_output_config, {inputValue: tensorboard_output_config},
       --spot_instance, {inputValue: spot_instance},
       --max_wait_time, {inputValue: max_wait_time},
       --checkpoint_config, {inputValue: checkpoint_config},
