Implemented changes from PR, refactored utils.py, made sample pipeline more succinct, removed hardcoding from integration tests

--- a/components/aws/sagemaker/tests/integration_tests/resources/config/xgboost-mnist-trainingjob-debugger/config.yaml
+++ b/components/aws/sagemaker/tests/integration_tests/resources/config/xgboost-mnist-trainingjob-debugger/config.yaml
@@ -50,7 +50,7 @@ Arguments:
           save_interval: "5"
   debug_rule_config:
     - RuleConfigurationName: LossNotDecreasing
-      RuleEvaluatorImage: ((BUILTIN_RULE_REGISTRY)).dkr.ecr.((REGION)).amazonaws.com/sagemaker-debugger-rules:latest
+      RuleEvaluatorImage: ((BUILTIN_RULE_IMAGE))
       RuleParameters:
         collection_names: metrics
         num_steps: "10"
