--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/cache.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/cache.yaml
@@ -36,7 +36,9 @@ rules:
   - mutatingwebhookconfigurations
   verbs:
   - create
+  - delete
   - get
+  - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -52,8 +54,10 @@ rules:
   - secrets
   verbs:
   - create
+  - delete
   - get
   - patch
+  - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
