fix(backend): Backend - Cache - Fixed reinstallation. Fixes #4299 (#4320)
* Backend - Cache - Fixed reinstallation by adding missing roles

* Stop ignoring the deletion errors

* Added patch permission as well

It should not be triggered, but might be useful in the future.

--- a/manifests/kustomize/base/cache-deployer/cluster-scoped/cache-deployer-clusterrole.yaml
+++ b/manifests/kustomize/base/cache-deployer/cluster-scoped/cache-deployer-clusterrole.yaml
@@ -21,7 +21,10 @@ rules:
   - mutatingwebhookconfigurations
   verbs:
   - create
+  - delete
   - get
+  - list
+  - patch
 - apiGroups:
   - certificates.k8s.io
   resources:
