Update region input description

--- a/components/aws/sagemaker/batch_transform/component.yaml
+++ b/components/aws/sagemaker/batch_transform/component.yaml
@@ -57,7 +57,7 @@ implementation:
     - python3
     image: redbackthomson/aws-kubeflow-sagemaker:latest
 inputs:
-- description: The region where the training job launches.
+- description: The region for the SageMaker resource.
   name: region
   type: String
 - default: ''
