--- a/manifests/kustomize/sample/kustomization.yaml
+++ b/manifests/kustomize/sample/kustomization.yaml
@@ -8,7 +8,7 @@ bases:
   # If you want to monitor your Kubeflow Pipelines servers with those metrics, you'll need a Prometheus server in your Kubeflow Pipelines cluster.
   # If you don't already have a Prometheus server up, you can use the following configuration files for Prometheus.
   # If you have your own Prometheus server up already or you don't want a Prometheus server for monitoring, you can comment the following line out.
-  - third-party/prometheus
+  - ../third-party/prometheus
 
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
