--- a/components/aws/sagemaker/requirements.txt
+++ b/components/aws/sagemaker/requirements.txt
@@ -1,8 +1,13 @@
+# Runtime requirements
 boto3==1.13.19
 sagemaker==1.54.0
 pathlib2==2.3.5
 pyyaml==3.12
+mypy-extensions==0.4.3
+
+# Development requirements
+kfp==0.5.1
 docformatter==1.3.1
 black==19.10b0
-mypy-extensions==0.4.3
-kfp==0.5.1
+coverage==5.1
+pytest==5.4.1
