--- a/components/kubeflow/kfserving/component.yaml
+++ b/components/kubeflow/kfserving/component.yaml
@@ -13,7 +13,7 @@ inputs:
   - {name: Autoscaling Target,              type: String, default: '0',        description: 'Autoscaling Target Number'}
   - {name: KFServing Endpoint,              type: String, default: '', description: 'KFServing remote deployer API endpoint'}
   - {name: Service Account,                 type: String, default: '', description: 'Model Service Account'}
-  - {name: Istio Sidecar,                   type: String, default: 'True',     description: 'Whether to enable istio sidecar injection'}
+  - {name: Istio Sidecar,                   type: Bool,   default: 'True',     description: 'Whether to enable istio sidecar injection'}
 outputs:
   - {name: Service Endpoint URI, type: String,                      description: 'URI of the deployed prediction service..'}
 implementation:
